--- a/Appi/app/src/main/res/layout/activity_alue_valinta.xml
+++ b/Appi/app/src/main/res/layout/activity_alue_valinta.xml
@@ -37,5 +37,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/kasvuvyohyke" />
+
+        <Button
+            android:id="@+id/btnEteenpain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            tools:layout_editor_absoluteX="284dp"
+            tools:layout_editor_absoluteY="552dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
