--- a/Appi/app/src/main/res/layout/activity_alue_valinta.xml
+++ b/Appi/app/src/main/res/layout/activity_alue_valinta.xml
@@ -44,9 +44,13 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:background="@drawable/pyorea_nappi_bg"
-            app:srcCompat="@drawable/ic_arrow_right_foreground"
-            tools:layout_editor_absoluteX="315dp"
-            tools:layout_editor_absoluteY="547dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.951"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.971"
+            app:srcCompat="@drawable/ic_arrow_right_foreground" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
