--- a/Appi/app/src/main/res/layout/activity_kasvi_valinta.xml
+++ b/Appi/app/src/main/res/layout/activity_kasvi_valinta.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".KasviValinta">
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btnGetSelected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_gravity="center"
-        android:text="Get Selected" />
+    tools:context=".MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
+        tools:listitem="@layout/listaan"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-    </android.support.v7.widget.RecyclerView>
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+</android.support.constraint.ConstraintLayout>
