--- a/Appi/app/src/main/res/layout/listaan.xml
+++ b/Appi/app/src/main/res/layout/listaan.xml
@@ -16,7 +16,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:text="Kasvi"
+            android:text="kasvi"
             android:textStyle="bold"
             android:id="@+id/kasvi"
             android:textSize="28sp"
@@ -25,7 +25,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:text="Aikaisintaan"
+            android:text="aikaisintaan"
             android:textSize="23sp"
             android:id="@+id/aikaisintaan"
             android:layout_height="wrap_content"/>
