--- a/Appi/app/src/main/res/layout/activity_istutusajat.xml
+++ b/Appi/app/src/main/res/layout/activity_istutusajat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Istutusajat"
+    tools:context=".IstutusAjat"
     android:orientation="horizontal">
 
     <TextView
