--- a/Appi/app/src/main/res/layout/activity_istutusajat.xml
+++ b/Appi/app/src/main/res/layout/activity_istutusajat.xml
@@ -16,11 +16,9 @@
         android:textColor="@color/material_dynamic_primary50"
         android:textSize="30sp" />
 
-    <ListView
-        android:id="@+id/lvLista"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtKasvilista"
-        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
