--- a/Appi/app/src/main/res/layout/listaan.xml
+++ b/Appi/app/src/main/res/layout/listaan.xml
@@ -22,6 +22,13 @@
             android:textSize="28sp"
             android:textColor="@android:color/black"
             android:layout_height="wrap_content"/>
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/valitse"
+            android:checked="false"
+            android:onClick="valitutKasvit"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
