--- a/Appi/app/src/main/res/layout/listaan.xml
+++ b/Appi/app/src/main/res/layout/listaan.xml
@@ -27,8 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/valitse"
-            android:checked="false"
-            android:onClick="valitutKasvit"/>
+            android:checked="false" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
