Kasveja pystyy nyt valitsemaan. Nuoli nappi lisatty, muttei napissa viela toiminnallisuutta

--- a/Appi/app/src/main/res/layout/listaan.xml
+++ b/Appi/app/src/main/res/layout/listaan.xml
@@ -23,11 +23,11 @@
             android:textColor="@android:color/black"
             android:layout_height="wrap_content"/>
 
-        <CheckBox
+    <!--    <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/valitse"
-            android:checked="false" />
+            android:checked="false" /> -->
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
