--- a/Appi/app/src/main/res/layout/activity_kasvi_valinta.xml
+++ b/Appi/app/src/main/res/layout/activity_kasvi_valinta.xml
@@ -16,4 +16,18 @@
         tools:layout_editor_absoluteY="0dp"
         tools:listitem="@layout/listaan" />
 
+
+    <ImageButton
+        android:id="@+id/btnNuoli"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/pyorea_nappi_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.971"
+        app:srcCompat="@drawable/ic_arrow_right_foreground" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
