--- a/Appi/app/src/main/res/layout/activity_alue_valinta.xml
+++ b/Appi/app/src/main/res/layout/activity_alue_valinta.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <!-- <ImageView
             android:id="@+id/imgKasvuvyohykkeet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,7 +50,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.971"
-            app:srcCompat="@drawable/ic_arrow_right_foreground" />
+            app:srcCompat="@drawable/ic_arrow_right_foreground" /> -->
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnNuoli"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.951"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.971" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
