Tietojen haku istutusAjat-nakymaan

--- a/Appi/app/src/main/res/layout/kasvi_lista.xml
+++ b/Appi/app/src/main/res/layout/kasvi_lista.xml
@@ -28,6 +28,22 @@
             android:textColor="@color/black"
             android:textSize="15sp"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tapa"
+            android:text="tapa"
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/aika"
+            android:text="istutusaika"
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
