--- a/Appi/app/src/main/res/layout/activity_kasvi_valinta.xml
+++ b/Appi/app/src/main/res/layout/activity_kasvi_valinta.xml
@@ -16,14 +16,14 @@
         tools:layout_editor_absoluteY="0dp"
         tools:listitem="@layout/listaan" />
 
-    <!-- <Button
+     <Button
         android:id="@+id/btnTarkista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tarkista"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="676dp" />-->
+        tools:layout_editor_absoluteY="676dp" />
 
          <ImageButton
         android:id="@+id/btnTallenna"
