--- a/Appi/app/src/main/res/layout/activity_kasvi_valinta.xml
+++ b/Appi/app/src/main/res/layout/activity_kasvi_valinta.xml
@@ -16,37 +16,26 @@
         tools:layout_editor_absoluteY="0dp"
         tools:listitem="@layout/listaan" />
 
-     <Button
-        android:id="@+id/btnTarkista"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tarkista"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="676dp" />
+    <!--<Button
+       android:id="@+id/btnTarkista"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Tarkista"
+       tools:ignore="MissingConstraints"
+       tools:layout_editor_absoluteX="0dp"
+       tools:layout_editor_absoluteY="676dp" />-->
 
-         <ImageButton
-        android:id="@+id/btnTallenna"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/pyorea_nappi_bg"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.951"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.971"
-        app:srcCompat="@drawable/ic_arrow_right_foreground" />
-
-    <!-- <Button
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:id="@+id/btnTallenna"
-         app:layout_constraintBottom_toBottomOf="parent"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintHorizontal_bias="0.951"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toTopOf="parent"
-         app:layout_constraintVertical_bias="0.971" />-->
+        <ImageButton
+       android:id="@+id/btnTallenna"
+       android:layout_width="80dp"
+       android:layout_height="80dp"
+       android:background="@drawable/pyorea_nappi_bg"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.951"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintVertical_bias="0.971"
+       app:srcCompat="@drawable/ic_arrow_right_foreground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
