--- a/Appi/app/src/main/res/layout/kasvi_lista.xml
+++ b/Appi/app/src/main/res/layout/kasvi_lista.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/alue"
             android:text="alue"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="15sp"/>
 
         <TextView
